log/build_2025-01-10_14-16-57/mypkg/stderr.log
  File "/home/shibata/ros2_ws/src/mypkg/install/mypkg/lib/python3.8/site-packages/mypkg/cpu_usage.listener.py", line 20
    ~
    ^
SyntaxError: invalid syntax

